2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.[ch]:
        * libnautilus-private/nautilus-program-choosing.[ch]:
        * libnautilus-private/nautilus-recent.[ch]:
	Use GAppInfo instead of GnomeVFSMimeApplication
	
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-information-panel.c:
        * test/test-nautilus-mime-actions.c:
	Update due to the api changes in the GAppInfo move.

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Use g_file_size_format_for_display instead of
	gnome_vfs_format_file_size_for_display
	
2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Remove unused GnomeVFSHandle stuff
	
2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Forgot to change GnomeVFSResult to GError in
	one spot.

007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_owner and nautilus_file_set_group
	using set_attributes
	

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_permissions using
	nautilus_file_set_attributes.

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        Add nautilus_file_set_attributes

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Add gnome_vfs_result_to_error call
	
        * libnautilus-private/nautilus-file.[ch]:
	Convert renaming to use gio.
	Pass GError instead of GnomeVFSResult in
	NautilusFileOperationCallback
	
        * src/file-manager/fm-error-reporting.c:
        * src/file-manager/fm-error-reporting.h: